src/snapshots/purs_oxide__parser__tests__parse_literals.snap
---
source: src/parser.rs
expression: "parse_expr(\"123\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 3,
    },
    Literal(
        Integer(
            123,
        ),
    ),
)
