src/snapshots/purs_oxide__parser__tests__parse_parens.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"(foo)\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 5,
    },
    Var(
        QualifiedName {
            module: None,
            name: Symbol {
                text: "foo",
            },
        },
    ),
)
