src/snapshots/purs_oxide__parser__tests__parse_qualified_var.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"Data.Maybe.fromJust\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 19,
    },
    Var(
        QualifiedName(
            Symbol(
                "Data.Maybe.fromJust",
            ),
        ),
    ),
)
