src/snapshots/purs_oxide__parser__tests__parse_record_expr.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" {} \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 3,
    },
    Literal(
        Object(
            [],
        ),
    ),
)
