src/snapshots/purs_oxide__parser__tests__parse_row_3.snap
---
source: src/parser.rs
expression: "parse_type(\"( | e )\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 7,
    },
    Row {
        fields: [],
        rest: Some(
            Located(
                SourceSpan {
                    start: 4,
                    end: 5,
                },
                Var(
                    Symbol(
                        "e",
                    ),
                ),
            ),
        ),
    },
)
