src/snapshots/purs_oxide__parser__tests__parse_row_4.snap
---
source: src/parser.rs
expression: "parse_type(\"()\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 2,
    },
    Row {
        fields: [],
        rest: None,
    },
)
