src/snapshots/purs_oxide__parser__tests__special_operators.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"x : y\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 5,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName(
                    Symbol(
                        "x",
                    ),
                ),
            ),
        ),
        [
            (
                Symbol(
                    QualifiedName(
                        Symbol(
                            ":",
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 4,
                        end: 5,
                    },
                    Var(
                        QualifiedName(
                            Symbol(
                                "y",
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
