src/snapshots/purs_oxide__parser__tests__standalone_operator.snap
---
source: src/parser.rs
expression: "parse_expr(\"(+)\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 3,
    },
    Operator(
        Symbol(
            Symbol(
                "+",
            ),
        ),
    ),
)
