src/snapshots/purs_oxide__parser__tests__type_operator.snap
---
source: src/parser.rs
expression: "parse_type(\"a + b\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 5,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                Symbol(
                    "a",
                ),
            ),
        ),
        [
            (
                Symbol(
                    "+",
                ),
                Located(
                    SourceSpan {
                        start: 4,
                        end: 5,
                    },
                    Var(
                        Symbol(
                            "b",
                        ),
                    ),
                ),
            ),
        ],
    ),
)
