src/snapshots/purs_oxide__parser__tests__typeclass_5.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            class Foo a\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 30,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                [salsa id]: 0,
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 29,
                    },
                    Commented(
                        [],
                        Class(
                            TypeClassDeclaration {
                                constraints: [],
                                name: Symbol {
                                    [salsa id]: 0,
                                    text: "Foo",
                                },
                                params: [
                                    (
                                        Symbol {
                                            [salsa id]: 1,
                                            text: "a",
                                        },
                                        None,
                                    ),
                                ],
                                fundeps: [],
                                methods: [],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
