src/snapshots/purs_oxide__parser__tests__wildcard.snap
---
source: src/parser.rs
expression: "parse_expr(\"_.foo\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 5,
    },
    Accessor(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Wildcard,
        ),
        Symbol(
            "foo",
        ),
    ),
)
